@@ -7,7 +7,7 @@
 
     <groupId>com.example</groupId>
     <artifactId>java-webview-app</artifactId>
-    <version>1.0.0</version>
+    <version>1.3.0</version>
     <packaging>jar</packaging>
 
     <name>Java WebView Desktop App</name>
@@ -133,6 +133,177 @@
                     </options>
                 </configuration>
             </plugin>
+
+            <!-- JPackage Plugin for Native Installers -->
+            <plugin>
+                <groupId>org.panteleyev</groupId>
+                <artifactId>jpackage-maven-plugin</artifactId>
+                <version>1.6.0</version>
+                <configuration>
+                    <name>Java WebView App</name>
+                    <appVersion>${project.version}</appVersion>
+                    <vendor>Phearun</vendor>
+                    <copyright>2025 Phearun</copyright>
+                    <description>Java WebView Desktop Application</description>
+                    <mainClass>com.example.app.DesktopApplication</mainClass>
+                    <mainJar>java-webview-app-${project.version}.jar</mainJar>
+                    <input>${project.build.directory}</input>
+                    <dest>${project.build.directory}/dist</dest>
+                    <javaOptions>
+                        <javaOption>-Djava.awt.headless=false</javaOption>
+                        <javaOption>--add-opens</javaOption>
+                        <javaOption>javafx.graphics/javafx.scene.web=ALL-UNNAMED</javaOption>
+                    </javaOptions>
+                    <!-- <icon>${project.basedir}/package/app-icon.ico</icon> -->
+                    <winMenu>true</winMenu>
+                    <winMenuGroup>Java WebView</winMenuGroup>
+                    <winShortcut>true</winShortcut>
+                    <winDirChooser>true</winDirChooser>
+                    <linuxMenuGroup>Java</linuxMenuGroup>
+                    <linuxShortcut>true</linuxShortcut>
+                </configuration>
+            </plugin>
+
+            <!-- Maven Assembly Plugin for Custom Packaging -->
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>3.6.0</version>
+                <configuration>
+                    <descriptors>
+                        <descriptor>${project.basedir}/src/assembly/dist.xml</descriptor>
+                    </descriptors>
+                </configuration>
+            </plugin>
+
+            <!-- Maven Properties Plugin for Build Metadata -->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>properties-maven-plugin</artifactId>
+                <version>1.2.1</version>
+                <executions>
+                    <execution>
+                        <phase>initialize</phase>
+                        <goals>
+                            <goal>read-project-properties</goal>
+                        </goals>
+                        <configuration>
+                            <files>
+                                <file>${project.basedir}/package/build.properties</file>
+                            </files>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
+
+        <!-- Plugin Management for Profiles -->
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.panteleyev</groupId>
+                    <artifactId>jpackage-maven-plugin</artifactId>
+                    <version>1.6.0</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
     </build>
+
+    <!-- Build Profiles for Different Platforms -->
+    <profiles>
+        <profile>
+            <id>windows</id>
+            <activation>
+                <os>
+                    <family>windows</family>
+                </os>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.panteleyev</groupId>
+                        <artifactId>jpackage-maven-plugin</artifactId>
+                        <configuration>
+                            <type>msi</type>
+                            <!-- <icon>${project.basedir}/package/app-icon.ico</icon> -->
+                            <winMenu>true</winMenu>
+                            <winMenuGroup>Java WebView</winMenuGroup>
+                            <winShortcut>true</winShortcut>
+                            <winUpgradeUuid>12345678-1234-1234-1234-123456789012</winUpgradeUuid>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
+            <id>macos</id>
+            <activation>
+                <os>
+                    <family>mac</family>
+                </os>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.panteleyev</groupId>
+                        <artifactId>jpackage-maven-plugin</artifactId>
+                        <configuration>
+                            <type>dmg</type>
+                            <!-- <icon>${project.basedir}/package/app-icon.icns</icon> -->
+                            <macPackageName>JavaWebView</macPackageName>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
+            <id>linux-deb</id>
+            <activation>
+                <os>
+                    <family>unix</family>
+                    <name>Linux</name>
+                </os>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.panteleyev</groupId>
+                        <artifactId>jpackage-maven-plugin</artifactId>
+                        <configuration>
+                            <type>deb</type>
+                            <icon>${project.basedir}/package/app-icon.png</icon>
+                            <linuxMenuGroup>Java</linuxMenuGroup>
+                            <linuxShortcut>true</linuxShortcut>
+                            <linuxDebMaintainer>phearun@example.com</linuxDebMaintainer>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+
+        <profile>
+            <id>linux-rpm</id>
+            <activation>
+                <os>
+                    <family>unix</family>
+                    <name>Linux</name>
+                </os>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.panteleyev</groupId>
+                        <artifactId>jpackage-maven-plugin</artifactId>
+                        <configuration>
+                            <type>rpm</type>
+                            <icon>${project.basedir}/package/app-icon.png</icon>
+                            <linuxMenuGroup>Java</linuxMenuGroup>
+                            <linuxShortcut>true</linuxShortcut>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
